--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation files('libs/libandroid_tensorflow_inference_java.jar')
-
+    compile 'com.roger.catloadinglibrary:catloadinglibrary:1.0.4'
 }
